--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.18",
     "@mui/styled-engine": "^5.15.14",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
