--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^11.2.6",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
